--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,13 @@
     <string name="general_definiciones_2_respuesta_1">Siempre</string>
     <string name="general_definiciones_2_respuesta_2">Cuando termina en N, S o vocal</string>
     <string name="general_definiciones_2_respuesta_3">Cuando no terminan en N, S o vocal</string>
+    <string name="title_activity_lessons">LessonsActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
