Check values on GeneralCategorias

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="general_categorias_pregunta">Selecciona la categoría a la que pertenece cada palabra</string>
     <string name="general_categorias_palabra_1">Árbol</string>
     <string name="general_categorias_palabra_2">Computadora</string>
-    <string name="general_categorias_palabra_3">Ilógico</string>
+    <string name="general_categorias_palabra_3">Ilogico</string>
     <string name="general_categorias_palabra_4">Acción</string>
     <string-array name="general_categorias_respuestas">
         <item>Aguda</item>
