--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="integrador_prompt">Elige las opciones correctas:</string>
     <string name="integrador_tilde">¿Lleva tilde?</string>
     <string name="integrador_silaba">¿En qué sílaba la lleva?</string>
+    <string name="integrador_si">Sí</string>
+    <string name="integrador_no">No</string>
     <string-array name="integrador_silaba_respuestas">
         <item>Última</item>
         <item>Penúltima</item>
