--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="puntos">Puntos:</string>
 
 
+    <string name="general_definiciones_1_prompt">Son palabras que llevan tilde</string>
     <string name="general_definiciones_1_pregunta">Son palabras que llevan tilde cuando no terminan en N, S o vocal:</string>
     <string name="general_definiciones_1_agudas">Agudas</string>
     <string name="general_definiciones_1_graves">Graves</string>
