--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,9 +45,11 @@
     <string name="general_definiciones_1_graves">Graves</string>
     <string name="general_definiciones_1_esdrújulas_sobreesdrujulas">Esdrújulas y sobreesdrújulas</string>
 
+    <string name="general_definiciones_2_prompt_1">Las palabras</string>
+    <string name="general_definiciones_2_prompt_2">llevan tilde:</string>
     <string name="general_definiciones_2_pregunta">Las palabras agudas llevan tilde</string>
     <string name="general_definiciones_2_respuesta_1">Siempre</string>
-    <string name="general_definiciones_2_respuesta_2">Cuando termina en N, S o vocal</string>
+    <string name="general_definiciones_2_respuesta_2">Cuando terminan en N, S o vocal</string>
     <string name="general_definiciones_2_respuesta_3">Cuando no terminan en N, S o vocal</string>
 
     <string name="diptongo_hiato_prompt">Elige las opciones correctas:</string>
