Se le cambio el font a las actividad.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,7 +125,7 @@ Hay palabras cuya acentuación depende del contexto en el que se utilicen, ya qu
     -David Alejandro Martínez Tristán\n
     -Ulrik Alberto Nuño Tapia\n
     -Diego Garza Macías\n\n
-En conjunto con las maestras de la Escuela de Humanidades y Educación:\n\n
+En conjunto con las maestras del Centro de Escritura:\n\n
     -María Robertha Leal\n
     -Yazmín Carrizales\n
     -Martha Pérez\n
